--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="#" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">Facebook</a>
+            <a href="https://www.linkedin.com/in/solomon-nwaka-eze-851a02309" target="_blank">LinkedIn</a>
+            <a href="https://www.facebook.com/share/1ArX6phGpg/" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
         </nav>
     </header>
@@ -34,7 +34,7 @@
         </main>
         <aside class="box">
             <h2>Ebonyi</h2>
-            <img src="images/ebonyi.webp" alt=" Otigba junction in Enugu">
+            <img src="images/ebonyi.webp" alt=" Udensi Roundabout">
             <p>
                 Ebonyi State, nicknamed "Salt of the Nation," is a southeastern Nigerian state known for its agricultural production and salt deposits. It's primarily an agricultural region, leading in the production of rice, yam, potatoes, maize, beans, and cassava. The state is also rich in solid mineral resources like lead, crude oil, and natural gas, though large-scale mining is not yet fully developed. Ebonyi's capital and largest city is Abakaliki. 
             </p>
