corrected image name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="grid">
         <main>
             <h1>Eze Solomon Nwaka | WDD 130</h1>
-            <img src="images/PASSPORT.webp" alt="Eze Solomon Nwaka" width="200">
+            <img src="images/profile.webp" alt="Eze Solomon Nwaka" width="200">
             <p>
                 Hi. I'm Solomon and I'm Nigerian. I'm a passionate Coder and an aspiring Software Developer
                 with a passion for simple, concise and maintainable code. I'm open to tech jobs that align with my skillset, preferably a remote job. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem distinctio omnis consequuntur fugit vero necessitatibus quam fuga, autem a deleniti quasi ipsa perferendis vitae libero nihil nobis iure sint aliquam. Distinctio non dicta numquam, rem molestiae sit corrupti deleniti consequatur. The man is coming
