--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
-            <a href="https://www.linkedin.com/in/solomon-nwaka-eze-851a02309" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/solomon-eze-218a7b34b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
             <a href="https://www.facebook.com/share/1ArX6phGpg/" target="_blank">Facebook</a>
             <a href="#" target="_blank">Twitter</a>
         </nav>
