--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,11 +25,12 @@
         <div class="hero">
             <img src="images/hero.webp" alt="hero image">
             <h1>Splash Whitewater Rafting Inc.</h1>
-            <div>                
-                <img src="images/happy-employees.webp" alt="An employee">
+            <div class="flex-mid">            
+               
                 <p>
                     Splash White Water Rafting combines year‑round access in Abakaliki Capital with global reach, a wide variety of activity levels and durations, specialized offerings like river bugging, and a strong focus on inclusive, professionally guided adventure. With consistently glowing customer feedback, it's a standout operator in the rafting and adventure travel industry.
                 </p>
+                 <img src="images/happy-employees.webp" alt="An employee" width="100" height="100">
             </div>
         </div>
         <section class="history">
