--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
             <h1 class="splash-heading">Contact Splash Whitewater Rafting Inc.</h1>
             <div class="adress-container">
                 <h4>Address</h4>
-                <address>#23 Blessed Martin's Street, Democracy Estate, Aguogboriga, Abakaliki, Ebonyi State.</address>
+                <address>#13 Chiboy Street, Democracy Estate, Aguogboriga, Abakaliki, Ebonyi State.</address>
             </div>
             <div class="adress-container">
                 <h4>Phone Numbers</h4>
